# TotalCore

./: # Volume footprint charts: a complete guide.md  .gitignore  AGENTS.md  HMM-RESEARCH-V1.md  LOCAL-FILES-INVENTORY.md  STARTUP-GUIDE.md  backtest-pipeline.md  ccxt-binance.md  deploy_runpod.sh  handoff-session-1.md  handoff-session-2.md  handoff-session-3.md  handoff-session-4.md  handoff-session-5.md  handoff-session-6.md  handoff-session-7-prompt.txt  handoff-session-7.md  handoff-session-8.md  hmm-implementation-v1.md  hmm_optimization_plan.md  pyproject.toml  research.txt  walkthrough.md
THEORY/: Complete Guide on Futures Contracts-ep1.md  Full MBO Orderflow Guide [Complete Beginner Course EP3].md  The Only Orderflow Basics Video You'll Ever Need... maybe.md
app/: api.py  coverage.py  db.py  experiment_store.py  models.py  store.py
docs/: risk_based_sizing.md  rl_future_algos.md  transformer_policy.md  verification_pass.md  volume-core-inventory.md
frontend/: backtest-lab.html  backtest-lab.js  control-panel.html  control-panel.js  fetch-history.html  fetch-history.js  hmm-dashboard.html  hmm-dashboard.js  jesse.html  package-lock.json  package.json  run-insights.html  run-insights.js  styles.css  total-core-v2.html  total-core-v2.js  total-core.html  total-core.js
runpod_payloads/: verify-pod.json
scripts/: check_db.py  eval_sb3.py  generate_manifest.py  replay_policy.py  run_api.sh  run_env_episode.py  run_experiment.py  run_jesse.sh  runpod_client.py  runpod_submit.py  test_ingestion.py  train_sb3.py  upload_volume.py  validate_tools.py  verify_hmm.py
(+3502 files in other folders)
