[project]
name = "tradecore"
version = "0.1.0"
description = "TradeCore data ingestion and RL control plane"
authors = [{name = "TradeCore"}]
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.3.80",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "polars>=1.5.0",
    "requests>=2.32.3",
    "python-multipart>=0.0.9",
    "gymnasium>=0.29.1",
    "numpy>=1.26.4",
    "stable-baselines3>=2.3.2",
    "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data", "frontend"]
